Game List. Players joining games.

--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.0.1-dev",
   "dependencies": {
     "express": "4.x",
-    "socket.io": "",
-    "mysql": "2.x",
-    "when": "",
-    "lodash": "",
     "cookie-parser": "",
+    "cookie-signature": "",
     "body-parser": "",
     "express-session" :"",
     "csurf": "",
-    "morgan": ""
+    "morgan": "",
+
+    "socket.io": "",
+    
+    "mysql": "2.x",
+    "when": "",
+    "lodash": "",
+    "handlebars": "~1.3"
   }
 }
