--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "jquery": "1.x",
     "ember": "~1.5",
-    "handlebars": "~1.3"
+    "handlebars": "~1.3",
+    
+    "moment": "2.x"
   }
 }
