in progress New Game list; Launch button that could maybe already launch host

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
           "password": "",
           "database": "lobbyserver" },
   "cookie_secret": "our_top_secret_key",
-  "base_url": "/"
+  "base_url": "/",
+  "port": 3020
 }
