--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "2.x",
     "when": "",
     "lodash": "",
-    "handlebars": "~1.3"
+    "handlebars": "~1.3",
+    "debug": ""
   }
 }
