--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "jquery": "1.x",
     "ember": "~1.5",
     "handlebars": "~1.3",
-    
-    "moment": "2.x"
+    "moment": "2.x",
+    "ember-data": "1.0.0-beta.7",
+    "bootstrap": "3.x",
+    "es5-shim": "3.x"
   }
 }
