--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "version": "0.0.1-dev",
   "dependencies": {
     "express": "4.x",
-    "cookie-parser": "",
-    "cookie-signature": "",
-    "body-parser": "",
-    "express-session": "",
-    "connect-redis": "",
-    "csurf": "",
+    "cookie-parser": "1.x",
+    "cookie-signature": "1.x",
+    "body-parser": "1.x",
+    "express-session": "1.x",
+    "connect-redis": "2.x",
+    "csurf": "1.x",
     "morgan": "",
     "less-middleware": "",
-    "socket.io": "",
+    "socket.io": "1.x",
     "mysql": "2.x",
     "when": "",
     "lodash": "",
     "handlebars": "~1.3",
-    "debug": "",
+    "debug": "~0.8",
     "passport": "~0.2",
     "passport-local": "1.x",
-    "bcrypt": ""
+    "bcryptjs": "1.x",
+    "glob": ""
   },
   "devDependencies": {
     "gulp": "^3.6.2",
