--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,12 @@
   "dependencies": {
     "jquery": "1.x",
     "ember": "~1.5",
+    "ember-data": "1.0.0-beta.7",
     "handlebars": "~1.3",
     "moment": "2.x",
-    "ember-data": "1.0.0-beta.7",
     "bootstrap": "3.x",
-    "es5-shim": "3.x"
+    "es5-shim": "3.x",
+    "lodash": "2.x",
+    "select2": "3.x"
   }
 }
