--- a/package.json
+++ b/package.json
@@ -3,40 +3,36 @@
   "name": "aoc-lobby-server",
   "version": "0.0.1-dev",
   "dependencies": {
-    "express": "4.x",
+    "bcryptjs": "1.x",
+    "body-parser": "1.x",
+    "connect-redis": "2.x",
     "cookie-parser": "1.x",
     "cookie-signature": "1.x",
-    "body-parser": "1.x",
-    "express-session": "1.x",
-    "connect-redis": "2.x",
     "csurf": "1.x",
-    "morgan": "",
-    "less-middleware": "",
-    "socket.io": "1.x",
-    "mysql": "2.x",
-    "lodash": "",
-    "handlebars": "~1.3",
     "debug": "~0.8",
+    "express": "4.x",
+    "express-session": "1.x",
+    "glob": "",
+    "handlebars": "~1.3",
+    "lenses": "0.x",
+    "less-middleware": "",
+    "lodash": "",
+    "lru-cache": "^2.5.0",
+    "morgan": "",
+    "mysql": "2.x",
+    "node-uuid": "^1.4.1",
     "passport": "~0.2",
     "passport-local": "1.x",
-    "bcryptjs": "1.x",
-    "glob": "",
-    "promise": "5.x",
-    "lenses": "0.x",
-    "lru-cache": "^2.5.0",
-    "node-uuid": "^1.4.1",
+    "passport-openid": "^0.3.1",
     "prelude-ls": "^1.1.1",
-    "qs": "^2.2.3"
+    "promise": "5.x",
+    "qs": "^2.2.3",
+    "socket.io": "1.x",
+    "steam-web": "^0.2.1"
   },
   "devDependencies": {
-    "gulp": "^3.6.2",
-    "gulp-concat": "^2.2.0",
-    "gulp-wrap": "^0.3.0",
-    "faker": "^1.1.0",
-    "gulp-uglify": "^0.3.2",
-    "gulp-rename": "^1.2.0",
-    "amd-optimize": "^0.2.5",
-    "gulp-esnext": "^1.2.0"
   },
-  "scripts": { "start": "DEBUG=aocmulti:* node --harmony server" }
+  "scripts": {
+    "start": "DEBUG=aocmulti:* node --harmony src/server"
+  }
 }
