start adding IRC server
The irc server will be hooked up to express through a simple PubSub-like global event channel.
Users logging in, joining rooms, leaving, and chatting will all go through IRC.
Game start messages and the like will also pass through the IRC server but will be sent to actual users as PRIVMSGs from GameServ or similar.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   , "curry": "1.x"
   , "lambdajs": "1.x"
   , "node-uuid": "1.x"
-  , "bluebird": "2.x" }
+  , "bluebird": "2.x"
+  , "ircs": "0.x" }
 , "devDependencies":
   { "6to5": "2.x" }
 , "scripts":
