--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "name": "aoc-lobby-server",
   "version": "0.0.1-dev",
   "dependencies": {
+    "awestruct": "^0.9.1",
     "bcryptjs": "1.x",
     "body-parser": "1.x",
     "connect-redis": "2.x",
     "cookie-parser": "1.x",
     "cookie-signature": "1.x",
     "csurf": "1.x",
+    "curry": "^1.2.0",
     "debug": "~0.8",
     "express": "4.x",
     "express-session": "1.x",
     "glob": "",
     "handlebars": "~1.3",
+    "lambdajs": "^1.0.1",
     "lenses": "0.x",
     "less-middleware": "",
     "lodash": "",
@@ -30,8 +33,7 @@
     "socket.io": "1.x",
     "steam-web": "^0.2.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "DEBUG=aocmulti:* node --harmony src/server"
   }
