--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-openid": "^0.3.1",
     "prelude-ls": "^1.1.1",
     "promise": "5.x",
+    "propprop": "^0.3.0",
     "qs": "^2.2.3",
     "socket.io": "1.x",
     "steam-web": "^0.2.1"
